Adds framework and index code layed out

--- a/index.html
+++ b/index.html
@@ -4,8 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="./assets/css/style.css"/>
 </head>
+
+
 <body>
-    
+    <header>
+        <h1 class="page-title">
+            Nicolas pace
+        </h1> 
+        <p class="morning-star">
+            <!-- <img src="./assets/images/Rise of the morning star logo 1.png" alt="A four pointed starwiths a diamond in each corner">  -->
+        </p>  
+    </header>
+
+    <div class="about-me">
+        <h1 class="lable">
+            About me
+        </h1>
+        <p>
+            My name is Nicolas pace, I am 21 years old and i have been active in the field of coding for 5 years. I am also a writer, artist and game desiner
+        </p>
+    </div>
+
+    <main class="projects">
+        <h1 class="lable">
+            Projects
+        </h1>
+        <ul>
+            <section class="box">
+                <!-- last homework -->
+                <a href="https://eon1220.github.io/Horiseon-accessibility/">Horiseon Web Consolting</a>
+            </section>
+            <section class="box">
+                <!-- Cite where i plan to post game demos when ready -->
+                <a href="https://eon1220.itch.io/">Itch.io</a>
+            </section>
+            <section>
+                <!-- cite where I post writing project stuff -->
+                <a href="https://unvale.io/Eon">Unvale</a>
+            </section>
+            <section class="box">
+                <!-- First game still in development -->
+                <a href="#">Project: Dulla</a>
+            </section>
+            <section class="box"> 
+                <!-- Personal writing and world building project -->
+                <a href="#">Rise of the morning stars</a>
+            </section>
+        </ul>
+    </main>
+
+  
+    <footer class="Contacts">
+        <h1 class="lable">
+            Contacts
+        </h1>
+        <ul>
+            <li> <a href="https://github.com/Eon1220">Github</a></li>
+            <li> <a href="nicolaspace21@gmail.com">Email</a></li>
+          </ul>
+    </footer>
+
 </body>
+
 </html>
