adds more images to assest, adds basic style elements

--- a/index.html
+++ b/index.html
@@ -10,16 +10,29 @@
 
 <body>
     <header>
-        <h1 class="page-title">
+        <!-- <h1 class="morning-star">
+            <img src="./assets/images/Rise of the morning star logo 1.png" alt="A four pointed starwiths a diamond in each corner">
+        </h1>  -->
+        <h1 class="lable">
             Nicolas pace
-        </h1> 
-        <p class="morning-star">
-            <!-- <img src="./assets/images/Rise of the morning star logo 1.png" alt="A four pointed starwiths a diamond in each corner">  -->
-        </p>  
+        </h1>
+
+        <ul>
+            <li>
+                <a href="#about-me">About Me</a>
+            </li>
+            <li>
+                <a href="#projects">Projects</a>
+            </li>
+            <li>
+                <a href="#contacts">Contacts</a>
+            </li>
+        </ul>
+        
     </header>
 
-    <div class="about-me">
-        <h1 class="lable">
+    <div id="about-me">
+        <h1>
             About me
         </h1>
         <p>
@@ -27,43 +40,44 @@
         </p>
     </div>
 
-    <main class="projects">
-        <h1 class="lable">
+    <main id="projects">
+        <h1>
             Projects
         </h1>
+            
         <ul>
-            <section class="box">
+            <h2>
                 <!-- last homework -->
                 <a href="https://eon1220.github.io/Horiseon-accessibility/">Horiseon Web Consolting</a>
-            </section>
-            <section class="box">
+            </h2>
+            <h3>
                 <!-- Cite where i plan to post game demos when ready -->
                 <a href="https://eon1220.itch.io/">Itch.io</a>
-            </section>
-            <section>
+            </h3>
+            <h4>
                 <!-- cite where I post writing project stuff -->
                 <a href="https://unvale.io/Eon">Unvale</a>
-            </section>
-            <section class="box">
+            </h4>
+            <h5>
                 <!-- First game still in development -->
                 <a href="#">Project: Dulla</a>
-            </section>
-            <section class="box"> 
+            </h5>
+            <h6> 
                 <!-- Personal writing and world building project -->
                 <a href="#">Rise of the morning stars</a>
-            </section>
+            </h6>
         </ul>
     </main>
 
   
-    <footer class="Contacts">
+    <footer id="contacts">
         <h1 class="lable">
             Contacts
         </h1>
         <ul>
-            <li> <a href="https://github.com/Eon1220">Github</a></li>
-            <li> <a href="nicolaspace21@gmail.com">Email</a></li>
-          </ul>
+            <li><a href="https://github.com/Eon1220">Github</a></li>
+            <li><a href="nicolaspace21@gmail.com">Email</a></li>
+        </ul>
     </footer>
 
 </body>
