finishes readme and makes more improvemnts to index and style sheet

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <header>
-        <!-- <h1 class="morning-star">
+        <i>
             <img src="./assets/images/Rise of the morning star logo 1.png" alt="A four pointed starwiths a diamond in each corner">
-        </h1>  -->
+        </i>  
         <h1 class="lable">
             Nicolas pace
         </h1>
@@ -46,23 +46,23 @@
         </h1>
             
         <ul>
-            <h2>
+            <h2 id="appBox">
                 <!-- last homework -->
                 <a href="https://eon1220.github.io/Horiseon-accessibility/">Horiseon Web Consolting</a>
             </h2>
-            <h3>
+            <h3 id="appBox">
                 <!-- Cite where i plan to post game demos when ready -->
                 <a href="https://eon1220.itch.io/">Itch.io</a>
             </h3>
-            <h4>
+            <h4 id="appBox">
                 <!-- cite where I post writing project stuff -->
                 <a href="https://unvale.io/Eon">Unvale</a>
             </h4>
-            <h5>
+            <h5 id="appBox">
                 <!-- First game still in development -->
                 <a href="#">Project: Dulla</a>
-            </h5>
-            <h6> 
+            </h5> 
+            <h6 id="appBox" > 
                 <!-- Personal writing and world building project -->
                 <a href="#">Rise of the morning stars</a>
             </h6>
