added screenrecord and wireframe to read me, added comments throught code

--- a/index.html
+++ b/index.html
@@ -46,23 +46,23 @@
         </h1>
             
         <ul>
-            <h2 id="appBox">
+            <h2>
                 <!-- last homework -->
                 <a href="https://eon1220.github.io/Horiseon-accessibility/">Horiseon Web Consolting</a>
             </h2>
-            <h3 id="appBox">
-                <!-- Cite where i plan to post game demos when ready -->
+            <h3 class="appBox">
+                <!-- Cite where I plan to post game demos when ready -->
                 <a href="https://eon1220.itch.io/">Itch.io</a>
             </h3>
-            <h4 id="appBox">
+            <h4 class="appBox">
                 <!-- cite where I post writing project stuff -->
                 <a href="https://unvale.io/Eon">Unvale</a>
             </h4>
-            <h5 id="appBox">
+            <h5 class="appBox">
                 <!-- First game still in development -->
                 <a href="#">Project: Dulla</a>
             </h5> 
-            <h6 id="appBox" > 
+            <h6 class="appBox" > 
                 <!-- Personal writing and world building project -->
                 <a href="#">Rise of the morning stars</a>
             </h6>
