adds more comments throught code. ready to submit

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1 class="lable">
             Nicolas pace
         </h1>
-
+<!-- top page nav bar -->
         <ul>
             <li>
                 <a href="#about-me">About Me</a>
@@ -31,6 +31,7 @@
         
     </header>
 
+<!-- middle page about me -->
     <div id="about-me">
         <h1>
             About me
@@ -40,6 +41,7 @@
         </p>
     </div>
 
+<!-- Middle page projects -->
     <main id="projects">
         <h1>
             Projects
@@ -69,7 +71,7 @@
         </ul>
     </main>
 
-  
+  <!-- bottom page contact -->
     <footer id="contacts">
         <h1 class="lable">
             Contacts
